# Worldcup_betbot

./: .env.example  .gitignore  DEPLOY_GOOGLE_CLOUD.md  Dockerfile  HANDOFF.md  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  database.py  main.py  models.py  money.py  team_names.py
app/bot/: formatting.py  handlers.py  keyboards.py
app/integrations/: odds_api.py  odds_api_io.py  providers.py
app/services/: betting.py  groups.py  settlement.py  sync.py
docs/superpowers/plans/: 2026-06-24-api-usage-optimization.md  2026-06-24-compact-markets-and-btts.md  2026-06-24-expanded-match-markets.md  2026-06-24-odds-api-io-provider.md  2026-06-25-betting-flow-playoff-settlement.md
docs/superpowers/specs/: 2026-06-24-api-usage-optimization-design.md  2026-06-24-compact-markets-and-btts-design.md  2026-06-24-expanded-match-markets-design.md  2026-06-24-odds-api-io-provider-design.md  2026-06-25-betting-flow-playoff-settlement-design.md
tests/: conftest.py  test_betting.py  test_betting_flow.py  test_express.py  test_main.py  test_market_presentation.py  test_odds_api_io.py  test_providers.py  test_settlement.py  test_team_names.py
worldcup_betting_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
