[project]
name = "worldcup-betting-bot"
version = "0.1.0"
description = "Private fake-money Telegram betting bot for FIFA World Cup 2026"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.7,<4",
  "aiohttp>=3.9,<4",
  "apscheduler>=3.10,<4",
  "asyncpg>=0.29,<1",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.3,<3",
  "sqlalchemy[asyncio]>=2.0,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<1",
  "aiosqlite>=0.20,<1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
